Nu crapa faza cu orders. ez

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,7 @@
 <h1>Welcome to the Lunchpad page!</h1>
 <p>There is no food here. So go away.</p>
 
+<p>If you want to see all the orders, click the link.</p>
+
+<%= link_to 'Orders', controller: 'orders'%>
+
