Menu first commit

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,5 +3,9 @@
 
 <p>If you want to see all the orders, click the link.</p>
 
+<%= link_to 'My Menu', controller: 'menus' %>
+<br>
 <%= link_to 'Orders', controller: 'orders'%>
+
+
 
