Orders + Menus = Love

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -39,8 +39,8 @@
   </p>
  <p>
     <%= f.label :order_code %><br>
-    <% nr = rand(100..999) %>
-    <%= nr %>
+    <%= f.text_field :order_code, :value => rand(100..999) %>
+    
   </p>
   <p>
     <%= f.label :order_status %><br>
