--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -21,7 +21,7 @@
 </p>
 <p>
   <strong>Order code:</strong>
-  <%= rand(100..999) %>
+  <%= @order.order_code %>
 </p>
 <p>
   <strong>Order status:</strong>
