--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,3 +1,4 @@
+<% if current_user.admin? %>
 <h1>Listing orders</h1>
  
 <table>
@@ -13,13 +14,15 @@
       <td><%= order.menu %></td>
      
       <td><%= order.order_status%></td>
+
       <td><%= link_to 'Show', order_path(order) %></td>
       <td><%= link_to 'Edit', edit_order_path(order) %></td>
       <td><%= link_to 'Destroy', order_path(order),
               method: :delete,
               data: { confirm: 'Are you sure?' } %></td>
-    </tr>
+         </tr>
+
   <% end %>
 </table>
+ <% end %>
 
-<%= link_to 'New order', new_order_path %>
