--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New order</h1>
  
 <%= render 'form' %>
- 
-<%= link_to 'Back', orders_path %>
+ <% if current_user.admin? %>
+<%= link_to 'List orders', orders_path %>
+<%end%>
+<%= link_to 'Back', menus_path %>
