--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -24,7 +24,7 @@
     <%= f.select :order_status, ['Pending', 'Sent']%>
   </p>
  <% end %>
- 
+ <%= f.hidden_field :user_id, :value => current_user.id %>
   <p>
     <%= f.submit %>
   </p>
