--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,6 @@
 <p>
   <strong>Menu:</strong>
-  <%= @order.menu %>
+  <%= @order.menu.title %>
 </p>
  
 <% if current_user.admin? %>
@@ -12,4 +12,4 @@
 <%= link_to 'Edit', edit_order_path(@order) %> |
 <%= link_to 'Back', orders_path %>
 <% end %>
-<%= link_to 'Back', new_order_path %>
+<%= link_to 'New', new_order_path %>
