--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,24 @@
-<h1>Welcome to the Lunchpad page!</h1>
+<section class="section">
+            <article class="card">
+<h2>Welcome to the Lunchpad page!</h2>
 <p>There is no food here. So go away.</p>
 
-<p>If you want to see all the orders, click the link.</p>
 
-<%= link_to 'My Menu', controller: 'menus' %>
+
+<p>Why you read this anymore?... I said go away....</p>
+
+<p> Hmmm ok... i see you want to stay on this page... it's ok...</p>
+
+<p>You want to see all the orders?... click the link.</p>
+
+
+<%= link_to 'My Menu', controller: 'menus' , class: "form__input"%>
 <% if current_user.admin? %>
-<br>
+
 <%= link_to 'Orders', controller: 'orders'%>
 <% end %>
+</article>
+</section>
 
 
 
