--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,48 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<section class="section">
+            <article class="card">
+              <h2 class="card__title"> EDIT MENU</h2>
+              
+<%= form_for(resource, as: resource_name, class:"form", url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+  <div class="form__group">
+    <%= f.label :email ,class:"form__label" %>
+    <%= f.email_field :email, autofocus: true ,class:"form__input" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+  <div class="form__group">
+    <%= f.label :password , class: "form__label"%> <i>(leave blank if you don't want to change it)</i>
+    <%= f.password_field :password,class:"form__input", autocomplete: "off" %>
     <% if @minimum_password_length %>
       <br />
       <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div class="form__group">
+    <%= f.label :password_confirmation ,class:"form__label"%>
+    <%= f.password_field :password_confirmation, autocomplete: "off",class:"form__input" %>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
+  <div class="form__group">
+    <%= f.label :current_password , class:"form__label"
+     %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.password_field :current_password,class:"form__input" , autocomplete: "off"  %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
+  <div class="buton">
+    <%= f.submit "Update", class: "form__submit" %>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name),class:"form__submit", data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+</article>
+</section>
