--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,45 +1,51 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<section class="section">
+            <article class="card">
+              <h2 class="card__title"> SignUp</h2>
+              
+                    
+<%= form_for(resource, as: resource_name,class: "form", url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+  <div class="form__group">
+    <%= f.label :email , class: "form__label" %>
+    <%= f.email_field :email, autofocus: true , class: "form__input"%>
   </div>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+  <div class="form__group">
+    <%= f.label :name ,class: "form__label"%>
+    <%= f.text_field :name, class: "form__input" %>
   </div>
 
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+  <div class="form__group">
+    <%= f.label :password ,class: "form__label"%>
+    <% if @minimum_password_length %> 
+    <em>(<%= @minimum_password_length %> characters minimum )</em>
+    <% end %>
+    <%= f.password_field :password, autocomplete: "off" ,class: "form__input"%>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div class="form__group">
+    <%= f.label :password_confirmation,class: "form__label" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off" ,class: "form__input" %>
   </div>
 
-  <div class="field">
-    <%= f.label :phone %><br />
-    <%= f.text_field :phone %>
+  <div class="form__group">
+    <%= f.label :phone , class: "form__label"%>
+    <%= f.text_field :phone , class: "form__input"%>
   </div>
 
-  <div class="field">
-    <%= f.label :address %><br />
-    <%= f.text_field :address %>
+  <div class="form__group">
+    <%= f.label :address , class: "form__label"%>
+    <%= f.text_field :address ,class: "form__input"%>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="form__group">
+    <%= f.submit "Sign up",class: "form__submit" %>
   </div>
 <% end %>
-
+</article>
+</section>
+<!--
 <%= render "devise/shared/links" %>
+-->
