--- a/app/views/menus/edit.html.erb
+++ b/app/views/menus/edit.html.erb
@@ -1,5 +1,10 @@
-<h1>Editing Menu</h1>
+<section class="section">
+            <article class="card">
+
+<h2 class="form__submit--centrat">Editing Menu</h2>
  
 <%= render 'form' %>
  
 <%= link_to 'Back', menus_path %>
+</article>
+</section>
