--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -1,5 +1,10 @@
-<h1>Add New Menu</h1>
+<section class="section">
+            <article class="card">
+              
+<h2>Add New Menu</h2>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', menus_path %>
+</article>
+</section>
