--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,5 +1,4 @@
-<h1>Edit order</h1>
+<h2 class="form__submit--centrat">Edit order</h2>
  
 <%= render 'form' %>
  
-<%= link_to 'Back', orders_path %>
