--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,7 +1,15 @@
-<h1>New order</h1>
+
+
+<section class="demo-section">
+  
+  
+   <section class="section-float clearfix">
+
+ 
+           
  
 <%= render 'form' %>
- <% if current_user.admin? %>
-<%= link_to 'List orders', orders_path %>
-<%end%>
-<%= link_to 'Back', menus_path %>
+
+            
+</section>
+</section>
