--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="icon" type="image/png" href="assets/favicon.ico">
   <title>Lunchpad</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -17,8 +18,8 @@
               <%= link_to 'Administration', rails_admin_path %> </li>
             <% end %>
             <span class="culoare">
-            Logged in as <strong><%= current_user.email %> </strong>.</span>
-            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+            Logged in as <strong><%= current_user.email %> </strong></span>
+            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> 
             <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
           <% else %>
             <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> 
