--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -14,7 +14,7 @@
  
   <% @orders.each do |order| %>
     <tr>
-      <td><%= order.menu %></td>
+      <td><%= order.menu.title%></td>
      
       <td><%= order.order_status%></td>
 
